[package]
name = "zip-rs"
version = "0.1.0"
authors = ["ConnorSkees <39542938+ConnorSkees@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.12"
memchr = "2.4.1"
memmap = "0.7.0"
